add menu bar; add dark mode